基本逻辑理顺，准备设计数据库

--- a/xCTPPlugin/xCTPPlugin.vcxproj
+++ b/xCTPPlugin/xCTPPlugin.vcxproj
@@ -14,12 +14,13 @@
     <ProjectGuid>{0EDC4321-D015-4BFE-A194-F84F46680C40}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>xCTPPlugin</RootNamespace>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v110</PlatformToolset>
+    <PlatformToolset>v141_xp</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
