--- a/xFollowCenter/xFollowCenter.vcxproj.filters
+++ b/xFollowCenter/xFollowCenter.vcxproj.filters
@@ -78,6 +78,15 @@
     <ClInclude Include="Source\TargetStrategyGroup.h">
       <Filter>User</Filter>
     </ClInclude>
+    <ClInclude Include="Exchange.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Product.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Instrument.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\DatabaseConnection.cpp">
@@ -112,6 +121,15 @@
     </ClCompile>
     <ClCompile Include="Source\TargetStrategyGroup.cpp">
       <Filter>User</Filter>
+    </ClCompile>
+    <ClCompile Include="Exchange.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Product.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Instrument.cpp">
+      <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
